tests/rosetta/out/Java/align-columns.error
javac error: exit status 1
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:7: error: cannot find symbol
    static Map<String,any> f = newFormatter(text);
                      ^
  symbol:   class any
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:54: error: cannot find symbol
    static Map<String,any> newFormatter(String text) {
                      ^
  symbol:   class any
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:78: error: cannot find symbol
    static void printFmt(Map<String,any> f, int align) {
                                    ^
  symbol:   class any
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:6: error: incompatible types: String cannot be converted to double
    static double text = "Given$a$text$file$of$many$lines,$where$fields$within$a$line\n" + "are$delineated$by$a$single$'dollar'$character,$write$a$program\n" + "that$aligns$each$column$of$fields$by$ensuring$that$words$in$each\n" + "column$are$separated$by$at$least$one$space.\n" + "Further,$allow$for$each$word$in$a$column$to$be$either$left\n" + "justified,$right$justified,$or$center$justified$within$its$column.";
                         ^
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:7: error: incompatible types: double cannot be converted to String
    static Map<String,any> f = newFormatter(text);
                                            ^
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:50: error: incompatible types: int cannot be converted to String
        int left = Integer.parseInt((diff / 2));
                                          ^
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:60: error: cannot find symbol
            if (Objects.equals(lines.get(i).size(), 0)) {
                                           ^
  symbol:   method size()
  location: class String
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:68: error: cannot find symbol
                int wlen = words.get(j).size();
                                       ^
  symbol:   method size()
  location: class String
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:76: error: cannot find symbol
        return new TextWidth(fmtLines, width);
                   ^
  symbol:   class TextWidth
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:79: error: cannot find symbol
        List<List<String>> lines = (List<List<String>>)((any)f.get("text"));
                                                         ^
  symbol:   class any
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:80: error: cannot find symbol
        List<Integer> width = (List<Integer>)((any)f.get("width"));
                                               ^
  symbol:   class any
  location: class AlignColumns
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:83: error: incompatible types: List<String> cannot be converted to List<List<String>>
            List<List<String>> words = lines.get(i);
                                                ^
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:87: error: incompatible types: String cannot be converted to Number
                line = ((Number)line + ((Number)pad(words.get(j), width.get(j), align)).doubleValue()).doubleValue() + " ";
                                ^
/tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java:87: error: incompatible types: List<String> cannot be converted to String
                line = ((Number)line + ((Number)pad(words.get(j), width.get(j), align)).doubleValue()).doubleValue() + " ";
                                                             ^
Note: /tmp/TestMochiToJavaalign-columns1956472921/001/AlignColumns.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
14 errors
